--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "framer-motion": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.6.0",
+    "react-router-dom": "^6.6.0",
     "react-scripts": "5.0.1",
     "zustand": "^4.1.5"
   },
@@ -39,6 +41,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9"
+    "@types/react-dom": "^18.0.9",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
